recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:3: error: ';' expected but ',' found.
  val xpos = getX(),
                   ^